--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,6 +25,16 @@ services:
     restart: always
     networks:
       - app_network
+  
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:4672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: password
 
 volumes:
   pgdata_prod:
